src/test/ui/imports/extern-prelude-extern-crate-restricted-shadowing.stderr
error: macro-expanded `extern crate` items cannot shadow names passed with `--extern`
  --> $DIR/extern-prelude-extern-crate-restricted-shadowing.rs:20:9
   |
LL |         extern crate std as core;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | define_other_core!();
   | --------------------- in this macro invocation

error[E0659]: `Vec` is ambiguous (macro-expanded name vs less macro-expanded name from outer scope during import/macro resolution)
  --> $DIR/extern-prelude-extern-crate-restricted-shadowing.rs:14:9
   |
LL |         Vec::panic!();
   |         ^^^ ambiguous name
   |
note: `Vec` could refer to the crate imported here
  --> $DIR/extern-prelude-extern-crate-restricted-shadowing.rs:6:9
   |
LL |         extern crate std as Vec;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | define_vec!();
   | -------------- in this macro invocation
note: `Vec` could also refer to the struct defined here
  --> $SRC_DIR/libstd/prelude/v1.rs:LL:COL
   |
LL | pub use crate::vec::Vec;
   |         ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0659`.
